--- a/package.json
+++ b/package.json
@@ -33,5 +33,10 @@
     "memory-fs": "^0.3.0",
     "pify": "^2.3.0",
     "webpack": "^1.13.3"
-  }
+  },
+  "files": [
+    "LICENSE",
+    "README.md",
+    "index.js"
+  ]
 }
