Test with Elm 0.18 (#4)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+dist: trusty
 sudo: false
 
 cache:
@@ -10,13 +11,16 @@ node_js:
 
 env:
   matrix:
-    # prepare for testing on multiple elm versions
     - ELM_VERSION=0.17.1
+    - ELM_VERSION=0.18.0
 
 install:
-  - npm install -g elm@$ELM_VERSION
+  - npm install elm@$ELM_VERSION
   - npm install
-  - cd fixtures && ../node_modules/.bin/elm-package install -y
+  - ./node_modules/.bin/elm-repl --version
+  - cd fixtures
+    && ../node_modules/.bin/elm-package install -y
+    && ../node_modules/.bin/elm-make *.elm  --yes --output /dev/null
 
 script:
   - npm test
