--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "devDependencies": {
     "ava": "^0.16.0",
-    "elm": "0.17.1",
+    "elm": "0.17.1 - 0.18.0",
     "elm-webpack-loader": "^3.0.6",
     "file-loader": "^0.9.0",
     "memory-fs": "^0.3.0",
