--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ env:
 install:
   - npm install elm@$ELM_VERSION
   - npm install
+  - npm install -g npm-install-peers
+  - npm-install-peers
   - ./node_modules/.bin/elm-repl --version
   - cd fixtures
     && ../node_modules/.bin/elm-package install -y
