--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,12 @@ env:
     - ELM_VERSION=0.17.1
     - ELM_VERSION=0.18.0
 
-install:
-  - npm install elm@$ELM_VERSION
-  - npm install
+before_install:
+  # Don't create a lock file in order to work around:
+  # https://github.com/npm/npm/issues/16987
+  - npm install elm@$ELM_VERSION --no-shrinkwrap
+
+before_script:
   - npm install -g npm-install-peers
   - npm-install-peers
   - ./node_modules/.bin/elm-repl --version
