--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "webpack loader for webpackifying asset references in Elm code",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/ava"
+    "test": "WEBPACK_VERSION=$(./node_modules/.bin/webpack --version) ./node_modules/.bin/ava"
   },
   "repository": {
     "type": "git",
@@ -27,7 +27,7 @@
   },
   "peerDependencies": {
     "babel-core": "^6.18.2",
-    "webpack": "^2.0.0"
+    "webpack": ">=1.13.3 <3.0.0"
   },
   "devDependencies": {
     "ava": "^0.19.0",
@@ -35,7 +35,8 @@
     "elm-webpack-loader": "^3.0.6",
     "file-loader": "^0.9.0",
     "memory-fs": "^0.3.0",
-    "pify": "^2.3.0"
+    "pify": "^2.3.0",
+    "semver": "^5.3.0"
   },
   "files": [
     "LICENSE",
