--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
   },
   "devDependencies": {
     "ava": "^0.19.0",
-    "elm": "0.17.1 - 0.18.0",
-    "elm-webpack-loader": "^3.0.6",
+    "elm": ">= 0.19.0",
+    "elm-webpack-loader": "^5.0.0",
     "file-loader": "^0.9.0",
     "memory-fs": "^0.3.0",
     "pify": "^2.3.0",
